Fixed spacing layout

--- a/style.css
+++ b/style.css
@@ -10,15 +10,23 @@ General Divisions
     border-radius: 10px;
 }
 
+
+.mainSpacer{
+    width: 100%;
+    height: 5%;
+}
+
+
 .mainContentContainer{
-    width: 97%;
-    padding: 1.5%;
+    width: 90%;
+    padding: 2%;
     border: 0px;
-    margin-top: 1%;
     background-color: white;
     border-radius: 10px;
 
-    text-align: justify!important;
+    margin: auto;
+
+    text-align: justify;
 }
 
 .sideContentContainer{
@@ -62,11 +70,12 @@ General Components
 */
 body{
     background: url("Img/bg.png");
-    background-size: auto;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
 
     text-align: center;
+    align-content: center;
 }
 
 h1, h2{
